--- a/ServerStatusNotifier/app/src/main/res/values/strings.xml
+++ b/ServerStatusNotifier/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="server_password">Server password</string>
     <string name="notification_title">Alert! Offline server(s)</string>
     <string name="notification_description">Notifier has found %s of your servers offline. Tap to open Notifier app.</string>
+    <string name="details_player_count">Online players:</string>
 </resources>
