--- a/ServerStatusNotifier/app/src/main/res/values/strings.xml
+++ b/ServerStatusNotifier/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">ServerStatusNotifier</string>
     <string name="notif_channel">SSN_CH</string>
     <string name="action_settings">Settings</string>
-    <string name="conn_server_timeout">Connection to server has timed out. Server is off, does not have installed plugin or typed invalid IP.</string>
+    <string name="conn_new_server_timeout">Connection to server has timed out. Server is off, does not have installed plugin or typed invalid IP.</string>
+    <string name="conn_server_timeout">Connection to server has timed out. Returned to server list.</string>
     <string name="invalid_ip">Invalid server address</string>
     <string name="common_close">Close</string>
     <string name="common_add">Add</string>
